--- a/src/index.css
+++ b/src/index.css
@@ -83,19 +83,23 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Roboto';
   color: var(--black-color);
+
+  /* need for menu */
+  overflow-x: hidden;
 }
 
 .app {
   position: relative;
   padding: 20px;
-  overflow: hidden;
 
   max-width: 1440px;
   margin: 0 auto;
 
-  min-height: 100vh;
+  /* need for menu */
+  overflow-y: visible;
 }
 
 @media( min-width: 836px ) {
